src/objects/Consolidated_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consolidated Charges</relationshipLabel>
        <relationshipName>Consolidated_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Consolidated Charges</relationshipLabel>
        <relationshipName>Consolidated_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Bearing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Bearing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waive</label>
        <type>Checkbox</type>
    </fields>
    <label>Consolidated Charge</label>
    <nameField>
        <displayFormat>CLC-{00000000}</displayFormat>
        <label>Consolidated Charge Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidated Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>